--- a/English.lproj/MyDocument.xib
+++ b/English.lproj/MyDocument.xib
@@ -21,10 +21,6 @@
     </object>
     <object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
       <bool key="EncodedWithXMLCoder">YES</bool>
-      <integer value="100302"/>
-      <integer value="100409"/>
-      <integer value="100459"/>
-      <integer value="100484"/>
       <integer value="100274"/>
     </object>
     <object class="NSArray" key="IBDocument.PluginDependencies">
@@ -790,7 +786,7 @@
         <string key="NSWindowContentMaxSize">{1.7976931348623157e+308, 1.7976931348623157e+308}</string>
         <string key="NSWindowContentMinSize">{300, 200}</string>
         <object class="NSView" key="NSWindowView" id="568628114">
-          <reference key="NSNextResponder"/>
+          <nil key="NSNextResponder"/>
           <int key="NSvFlags">256</int>
           <object class="NSMutableArray" key="NSSubviews">
             <bool key="EncodedWithXMLCoder">YES</bool>
@@ -1240,7 +1236,6 @@
             </object>
           </object>
           <string key="NSFrameSize">{893, 491}</string>
-          <reference key="NSSuperview"/>
         </object>
         <string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
         <string key="NSMinSize">{300, 278}</string>
@@ -1302,7 +1297,7 @@
         </object>
       </object>
       <object class="NSCustomView" id="681348116">
-        <reference key="NSNextResponder"/>
+        <nil key="NSNextResponder"/>
         <int key="NSvFlags">268</int>
         <object class="NSMutableArray" key="NSSubviews">
           <bool key="EncodedWithXMLCoder">YES</bool>
@@ -1357,7 +1352,6 @@
           </object>
         </object>
         <string key="NSFrameSize">{236, 38}</string>
-        <reference key="NSSuperview"/>
         <string key="NSClassName">NSView</string>
       </object>
       <object class="NSCustomView" id="100433385">
@@ -1885,7 +1879,7 @@
         </object>
       </object>
       <object class="NSCustomView" id="179969830">
-        <reference key="NSNextResponder"/>
+        <nil key="NSNextResponder"/>
         <int key="NSvFlags">268</int>
         <object class="NSMutableArray" key="NSSubviews">
           <bool key="EncodedWithXMLCoder">YES</bool>
@@ -1935,7 +1929,6 @@
           </object>
         </object>
         <string key="NSFrameSize">{395, 41}</string>
-        <reference key="NSSuperview"/>
         <string key="NSClassName">NSView</string>
       </object>
     </object>
@@ -2399,38 +2392,6 @@
           <int key="connectionID">100478</int>
         </object>
         <object class="IBConnectionRecord">
-          <object class="IBActionConnection" key="connection">
-            <string key="label">contextualMenuAddLocalRepositoryRef:</string>
-            <reference key="source" ref="613418571"/>
-            <reference key="destination" ref="1092"/>
-          </object>
-          <int key="connectionID">100480</int>
-        </object>
-        <object class="IBConnectionRecord">
-          <object class="IBActionConnection" key="connection">
-            <string key="label">contextualMenuAddServerRepositoryRef:</string>
-            <reference key="source" ref="613418571"/>
-            <reference key="destination" ref="828744095"/>
-          </object>
-          <int key="connectionID">100481</int>
-        </object>
-        <object class="IBConnectionRecord">
-          <object class="IBActionConnection" key="connection">
-            <string key="label">contextualMenuAddNewSidebarGroupItem:</string>
-            <reference key="source" ref="613418571"/>
-            <reference key="destination" ref="509607063"/>
-          </object>
-          <int key="connectionID">100482</int>
-        </object>
-        <object class="IBConnectionRecord">
-          <object class="IBActionConnection" key="connection">
-            <string key="label">contextualMenuRemoveSidebarItems:</string>
-            <reference key="source" ref="613418571"/>
-            <reference key="destination" ref="255517966"/>
-          </object>
-          <int key="connectionID">100483</int>
-        </object>
-        <object class="IBConnectionRecord">
           <object class="IBOutletConnection" key="connection">
             <string key="label">removeSidebarItemsAlertAccessoryAlertSuppressionCheckBox</string>
             <reference key="source" ref="454551463"/>
@@ -2453,6 +2414,38 @@
             <reference key="destination" ref="179969830"/>
           </object>
           <int key="connectionID">100493</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBActionConnection" key="connection">
+            <string key="label">mainMenuAddLocalRepositoryRef:</string>
+            <reference key="source" ref="613418571"/>
+            <reference key="destination" ref="1092"/>
+          </object>
+          <int key="connectionID">100494</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBActionConnection" key="connection">
+            <string key="label">mainMenuAddServerRepositoryRef:</string>
+            <reference key="source" ref="613418571"/>
+            <reference key="destination" ref="828744095"/>
+          </object>
+          <int key="connectionID">100495</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBActionConnection" key="connection">
+            <string key="label">mainMenuAddNewSidebarGroupItem:</string>
+            <reference key="source" ref="613418571"/>
+            <reference key="destination" ref="509607063"/>
+          </object>
+          <int key="connectionID">100496</int>
+        </object>
+        <object class="IBConnectionRecord">
+          <object class="IBActionConnection" key="connection">
+            <string key="label">mainMenuRemoveSidebarItems:</string>
+            <reference key="source" ref="613418571"/>
+            <reference key="destination" ref="255517966"/>
+          </object>
+          <int key="connectionID">100497</int>
         </object>
       </object>
       <object class="IBMutableOrderedSet" key="objectRecords">
@@ -2760,8 +2753,8 @@
               <reference ref="828744095"/>
               <reference ref="509607063"/>
               <reference ref="1024064026"/>
-              <reference ref="255517966"/>
               <reference ref="1092"/>
+              <reference ref="255517966"/>
             </object>
             <reference key="parent" ref="0"/>
             <string key="objectName">Menu (SidebarContextualMenu)</string>
@@ -2784,11 +2777,6 @@
           <object class="IBObjectRecord">
             <int key="objectID">100278</int>
             <reference key="object" ref="1024064026"/>
-            <reference key="parent" ref="938278807"/>
-          </object>
-          <object class="IBObjectRecord">
-            <int key="objectID">100279</int>
-            <reference key="object" ref="255517966"/>
             <reference key="parent" ref="938278807"/>
           </object>
           <object class="IBObjectRecord">
@@ -3295,6 +3283,11 @@
             <reference key="object" ref="583962795"/>
             <reference key="parent" ref="801144634"/>
           </object>
+          <object class="IBObjectRecord">
+            <int key="objectID">100279</int>
+            <reference key="object" ref="255517966"/>
+            <reference key="parent" ref="938278807"/>
+          </object>
         </object>
       </object>
       <object class="NSMutableDictionary" key="flattenedProperties">
@@ -3534,7 +3527,7 @@
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-          <string>{{1380, 1093}, {211, 63}}</string>
+          <string>{{1110, 1093}, {211, 63}}</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3576,7 +3569,7 @@
         </object>
       </object>
       <nil key="sourceID"/>
-      <int key="maxID">100493</int>
+      <int key="maxID">100497</int>
     </object>
     <object class="IBClassDescriber" key="IBDocument.Classes">
       <object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -5277,17 +5270,8 @@
             <bool key="EncodedWithXMLCoder">YES</bool>
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>contextualMenuAddLocalRepositoryRef:</string>
-              <string>contextualMenuAddNewSidebarGroupItem:</string>
-              <string>contextualMenuAddServerRepositoryRef:</string>
-              <string>contextualMenuCloneRepositoryRef:</string>
-              <string>contextualMenuConfigureLocalRepositoryRef:</string>
-              <string>contextualMenuConfigureRepositoryRef:</string>
-              <string>contextualMenuConfigureServerRepositoryRef:</string>
-              <string>contextualMenuOpenTerminalHere:</string>
-              <string>contextualMenuRemoveSidebarItems:</string>
-              <string>contextualMenuRevealRepositoryInFinder:</string>
               <string>mainMenuAddNewSidebarGroupItem:</string>
+              <string>mainMenuCloneRepository:</string>
               <string>mainMenuConfigureLocalRepositoryRef:</string>
               <string>mainMenuConfigureRepositoryRef:</string>
               <string>mainMenuConfigureServerRepositoryRef:</string>
@@ -5298,15 +5282,6 @@
             </object>
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>id</string>
-              <string>id</string>
-              <string>id</string>
-              <string>id</string>
-              <string>id</string>
-              <string>id</string>
-              <string>id</string>
-              <string>id</string>
-              <string>id</string>
               <string>id</string>
               <string>id</string>
               <string>id</string>
@@ -5322,17 +5297,8 @@
             <bool key="EncodedWithXMLCoder">YES</bool>
             <object class="NSArray" key="dict.sortedKeys">
               <bool key="EncodedWithXMLCoder">YES</bool>
-              <string>contextualMenuAddLocalRepositoryRef:</string>
-              <string>contextualMenuAddNewSidebarGroupItem:</string>
-              <string>contextualMenuAddServerRepositoryRef:</string>
-              <string>contextualMenuCloneRepositoryRef:</string>
-              <string>contextualMenuConfigureLocalRepositoryRef:</string>
-              <string>contextualMenuConfigureRepositoryRef:</string>
-              <string>contextualMenuConfigureServerRepositoryRef:</string>
-              <string>contextualMenuOpenTerminalHere:</string>
-              <string>contextualMenuRemoveSidebarItems:</string>
-              <string>contextualMenuRevealRepositoryInFinder:</string>
               <string>mainMenuAddNewSidebarGroupItem:</string>
+              <string>mainMenuCloneRepository:</string>
               <string>mainMenuConfigureLocalRepositoryRef:</string>
               <string>mainMenuConfigureRepositoryRef:</string>
               <string>mainMenuConfigureServerRepositoryRef:</string>
@@ -5344,47 +5310,11 @@
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
               <object class="IBActionInfo">
-                <string key="name">contextualMenuAddLocalRepositoryRef:</string>
-                <string key="candidateClassName">id</string>
-              </object>
-              <object class="IBActionInfo">
-                <string key="name">contextualMenuAddNewSidebarGroupItem:</string>
-                <string key="candidateClassName">id</string>
-              </object>
-              <object class="IBActionInfo">
-                <string key="name">contextualMenuAddServerRepositoryRef:</string>
-                <string key="candidateClassName">id</string>
-              </object>
-              <object class="IBActionInfo">
-                <string key="name">contextualMenuCloneRepositoryRef:</string>
-                <string key="candidateClassName">id</string>
-              </object>
-              <object class="IBActionInfo">
-                <string key="name">contextualMenuConfigureLocalRepositoryRef:</string>
-                <string key="candidateClassName">id</string>
-              </object>
-              <object class="IBActionInfo">
-                <string key="name">contextualMenuConfigureRepositoryRef:</string>
-                <string key="candidateClassName">id</string>
-              </object>
-              <object class="IBActionInfo">
-                <string key="name">contextualMenuConfigureServerRepositoryRef:</string>
-                <string key="candidateClassName">id</string>
-              </object>
-              <object class="IBActionInfo">
-                <string key="name">contextualMenuOpenTerminalHere:</string>
-                <string key="candidateClassName">id</string>
-              </object>
-              <object class="IBActionInfo">
-                <string key="name">contextualMenuRemoveSidebarItems:</string>
-                <string key="candidateClassName">id</string>
-              </object>
-              <object class="IBActionInfo">
-                <string key="name">contextualMenuRevealRepositoryInFinder:</string>
-                <string key="candidateClassName">id</string>
-              </object>
-              <object class="IBActionInfo">
                 <string key="name">mainMenuAddNewSidebarGroupItem:</string>
+                <string key="candidateClassName">id</string>
+              </object>
+              <object class="IBActionInfo">
+                <string key="name">mainMenuCloneRepository:</string>
                 <string key="candidateClassName">id</string>
               </object>
               <object class="IBActionInfo">
