--- a/English.lproj/CloneSheet.xib
+++ b/English.lproj/CloneSheet.xib
@@ -33,14 +33,14 @@
       <object class="NSWindowTemplate" id="530833982">
         <int key="NSWindowStyleMask">15</int>
         <int key="NSWindowBacking">2</int>
-        <string key="NSWindowRect">{{505, 212}, {827, 523}}</string>
+        <string key="NSWindowRect">{{505, 212}, {827, 518}}</string>
         <int key="NSWTFlags">603979776</int>
         <string key="NSWindowTitle">Clone Repository</string>
         <string key="NSWindowClass">NSWindow</string>
         <nil key="NSViewClass"/>
         <nil key="NSUserInterfaceItemIdentifier"/>
-        <string key="NSWindowContentMaxSize">{1500, 523}</string>
-        <string key="NSWindowContentMinSize">{680, 523}</string>
+        <string key="NSWindowContentMaxSize">{1500, 518}</string>
+        <string key="NSWindowContentMinSize">{680, 518}</string>
         <object class="NSView" key="NSWindowView" id="250803238">
           <reference key="NSNextResponder"/>
           <int key="NSvFlags">256</int>
@@ -72,7 +72,7 @@
             <object class="NSTextField" id="344900111">
               <reference key="NSNextResponder" ref="250803238"/>
               <int key="NSvFlags">266</int>
-              <string key="NSFrame">{{17, 404}, {793, 56}}</string>
+              <string key="NSFrame">{{17, 399}, {793, 56}}</string>
               <reference key="NSSuperview" ref="250803238"/>
               <bool key="NSEnabled">YES</bool>
               <object class="NSTextFieldCell" key="NSCell" id="63999227">
@@ -123,7 +123,7 @@
             <object class="NSTextField" id="1048200226">
               <reference key="NSNextResponder" ref="250803238"/>
               <int key="NSvFlags">268</int>
-              <string key="NSFrame">{{53, 397}, {48, 14}}</string>
+              <string key="NSFrame">{{53, 392}, {48, 14}}</string>
               <reference key="NSSuperview" ref="250803238"/>
               <bool key="NSEnabled">YES</bool>
               <object class="NSTextFieldCell" key="NSCell" id="421310515">
@@ -146,12 +146,12 @@
             <object class="NSTextField" id="889403987">
               <reference key="NSNextResponder" ref="250803238"/>
               <int key="NSvFlags">268</int>
-              <string key="NSFrame">{{8, 283}, {138, 39}}</string>
+              <string key="NSFrame">{{8, 278}, {138, 39}}</string>
               <reference key="NSSuperview" ref="250803238"/>
               <bool key="NSEnabled">YES</bool>
               <object class="NSTextFieldCell" key="NSCell" id="174751268">
                 <int key="NSCellFlags">67239424</int>
-                <int key="NSCellFlags2">138412032</int>
+                <int key="NSCellFlags2">138412288</int>
                 <string key="NSContents">Label</string>
                 <reference key="NSSupport" ref="879497694"/>
                 <reference key="NSControlView" ref="889403987"/>
@@ -175,7 +175,7 @@
                 <string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
                 <string>NeXT TIFF v4.0 pasteboard type</string>
               </set>
-              <string key="NSFrame">{{45, 328}, {64, 64}}</string>
+              <string key="NSFrame">{{45, 323}, {64, 64}}</string>
               <reference key="NSSuperview" ref="250803238"/>
               <bool key="NSEnabled">YES</bool>
               <object class="NSImageCell" key="NSCell" id="337150966">
@@ -199,7 +199,7 @@
                 <string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
                 <string>NeXT TIFF v4.0 pasteboard type</string>
               </set>
-              <string key="NSFrame">{{133, 344}, {32, 32}}</string>
+              <string key="NSFrame">{{133, 339}, {32, 32}}</string>
               <reference key="NSSuperview" ref="250803238"/>
               <bool key="NSEnabled">YES</bool>
               <object class="NSImageCell" key="NSCell" id="325599567">
@@ -219,7 +219,7 @@
             <object class="NSTextField" id="676791187">
               <reference key="NSNextResponder" ref="250803238"/>
               <int key="NSvFlags">268</int>
-              <string key="NSFrame">{{188, 397}, {73, 14}}</string>
+              <string key="NSFrame">{{188, 392}, {73, 14}}</string>
               <reference key="NSSuperview" ref="250803238"/>
               <bool key="NSEnabled">YES</bool>
               <object class="NSTextFieldCell" key="NSCell" id="851541455">
@@ -348,7 +348,7 @@
                   <reference key="NSSuperview" ref="655998502"/>
                 </object>
               </array>
-              <string key="NSFrame">{{188, 315}, {622, 76}}</string>
+              <string key="NSFrame">{{188, 310}, {622, 76}}</string>
               <reference key="NSSuperview" ref="250803238"/>
               <string key="NSOffsets">{0, 0}</string>
               <object class="NSTextFieldCell" key="NSTitleCell">
@@ -630,38 +630,20 @@
             </object>
             <object class="NSButton" id="332316152">
               <reference key="NSNextResponder" ref="250803238"/>
-              <int key="NSvFlags">268</int>
-              <string key="NSFrame">{{122, 227}, {13, 13}}</string>
+              <int key="NSvFlags">292</int>
+              <string key="NSFrame">{{183, 21}, {22, 18}}</string>
               <reference key="NSSuperview" ref="250803238"/>
               <bool key="NSEnabled">YES</bool>
               <object class="NSButtonCell" key="NSCell" id="940345894">
                 <int key="NSCellFlags">67239424</int>
-                <int key="NSCellFlags2">134217728</int>
+                <int key="NSCellFlags2">131072</int>
                 <string key="NSContents"/>
-                <reference key="NSSupport" ref="879497694"/>
+                <reference key="NSSupport" ref="26"/>
                 <reference key="NSControlView" ref="332316152"/>
-                <int key="NSButtonFlags">-1198767873</int>
-                <int key="NSButtonFlags2">133</int>
-                <object class="NSImage" key="NSNormalImage">
-                  <int key="NSImageFlags">549650432</int>
-                  <string key="NSSize">{1, 1}</string>
-                  <array class="NSMutableArray" key="NSReps">
-                    <array>
-                      <integer value="0"/>
-                      <object class="NSBitmapImageRep">
-                        <object class="NSData" key="NSTIFFRepresentation">
-                          <bytes key="NS.bytes">TU0AKgAAAAoAAAANAQAAAwAAAAEAAQAAAQEAAwAAAAEAAQAAAQIAAwAAAAIACAAIAQMAAwAAAAEAAQAA
-AQYAAwAAAAEAAQAAAREABAAAAAEAAAAIARIAAwAAAAEAAQAAARUAAwAAAAEAAgAAARYAAwAAAAEAAQAA
-ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
-                        </object>
-                      </object>
-                    </array>
-                  </array>
-                  <object class="NSColor" key="NSColor">
-                    <int key="NSColorSpace">3</int>
-                    <bytes key="NSWhite">MCAwAA</bytes>
-                  </object>
-                </object>
+                <int key="NSButtonFlags">1211912703</int>
+                <int key="NSButtonFlags2">2</int>
+                <reference key="NSNormalImage" ref="167485469"/>
+                <reference key="NSAlternateImage" ref="457184859"/>
                 <string key="NSAlternateContents"/>
                 <string key="NSKeyEquivalent"/>
                 <int key="NSPeriodicDelay">200</int>
@@ -670,14 +652,14 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
             </object>
             <object class="NSButton" id="937212701">
               <reference key="NSNextResponder" ref="250803238"/>
-              <int key="NSvFlags">268</int>
-              <string key="NSFrame">{{18, 223}, {105, 22}}</string>
+              <int key="NSvFlags">292</int>
+              <string key="NSFrame">{{46, 20}, {137, 18}}</string>
               <reference key="NSSuperview" ref="250803238"/>
               <bool key="NSEnabled">YES</bool>
               <object class="NSButtonCell" key="NSCell" id="981597069">
                 <int key="NSCellFlags">-2080244224</int>
                 <int key="NSCellFlags2">67108864</int>
-                <string key="NSContents">Advanced Options:</string>
+                <string key="NSContents">Show Advanced Options:</string>
                 <reference key="NSSupport" ref="978032874"/>
                 <reference key="NSControlView" ref="937212701"/>
                 <int key="NSButtonFlags">-2046410497</int>
@@ -804,7 +786,7 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
                   <reference key="NSSuperview" ref="922454013"/>
                 </object>
               </array>
-              <string key="NSFrame">{{304, 253}, {433, 50}}</string>
+              <string key="NSFrame">{{304, 248}, {433, 50}}</string>
               <reference key="NSSuperview" ref="250803238"/>
               <string key="NSOffsets">{0, 0}</string>
               <object class="NSTextFieldCell" key="NSTitleCell">
@@ -853,18 +835,18 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
                   </object>
                 </object>
               </array>
-              <string key="NSFrame">{{-1, 473}, {832, 51}}</string>
+              <string key="NSFrame">{{-1, 468}, {832, 51}}</string>
               <reference key="NSSuperview" ref="250803238"/>
               <string key="NSReuseIdentifierKey">_NS:1109</string>
               <string key="NSClassName">GradientBox</string>
             </object>
           </array>
-          <string key="NSFrameSize">{827, 523}</string>
+          <string key="NSFrameSize">{827, 518}</string>
           <reference key="NSSuperview"/>
         </object>
         <string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
-        <string key="NSMinSize">{680, 545}</string>
-        <string key="NSMaxSize">{1500, 545}</string>
+        <string key="NSMinSize">{680, 540}</string>
+        <string key="NSMaxSize">{1500, 540}</string>
         <string key="NSFrameAutosaveName"/>
         <bool key="NSWindowIsRestorable">YES</bool>
       </object>
@@ -1330,8 +1312,6 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
               <reference ref="676791187"/>
               <reference ref="655998502"/>
               <reference ref="1056698427"/>
-              <reference ref="332316152"/>
-              <reference ref="937212701"/>
               <reference ref="432104545"/>
               <reference ref="323443333"/>
               <reference ref="161641993"/>
@@ -1339,6 +1319,8 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
               <reference ref="1055848825"/>
               <reference ref="922454013"/>
               <reference ref="284552477"/>
+              <reference ref="332316152"/>
+              <reference ref="937212701"/>
             </array>
             <reference key="parent" ref="530833982"/>
           </object>
@@ -1864,14 +1846,14 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
       </object>
       <dictionary class="NSMutableDictionary" key="flattenedProperties">
         <string key="-3.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-        <string key="300.IBEditorWindowLastContentRect">{{15, 496}, {827, 523}}</string>
+        <string key="300.IBEditorWindowLastContentRect">{{15, 501}, {827, 518}}</string>
         <string key="300.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-        <string key="300.IBWindowTemplateEditedContentRect">{{15, 496}, {827, 523}}</string>
+        <string key="300.IBWindowTemplateEditedContentRect">{{15, 501}, {827, 518}}</string>
         <boolean value="NO" key="300.NSWindowTemplate.visibleAtLaunch"/>
         <boolean value="YES" key="300.windowTemplate.hasMaxSize"/>
         <boolean value="YES" key="300.windowTemplate.hasMinSize"/>
-        <string key="300.windowTemplate.maxSize">{1500, 523}</string>
-        <string key="300.windowTemplate.minSize">{680, 523}</string>
+        <string key="300.windowTemplate.maxSize">{1500, 518}</string>
+        <string key="300.windowTemplate.minSize">{680, 518}</string>
         <string key="301.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <object class="NSMutableDictionary" key="311.IBAttributePlaceholdersKey">
           <string key="NS.key.0">ToolTip</string>
@@ -1922,7 +1904,13 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
         <string key="421.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="422.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="423.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+        <object class="NSAffineTransform" key="423.IBViewBoundsToFrameTransform">
+          <bytes key="NSTransformStruct">P4AAAL+AAABDkoAAw24AAA</bytes>
+        </object>
         <string key="424.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+        <object class="NSAffineTransform" key="424.IBViewBoundsToFrameTransform">
+          <bytes key="NSTransformStruct">P4AAAL+AAABDPQAAw3MAAA</bytes>
+        </object>
         <string key="425.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <string key="426.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
         <object class="NSMutableDictionary" key="427.IBAttributePlaceholdersKey">
@@ -2239,6 +2227,14 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
           </object>
         </object>
         <object class="IBPartialClassDescription">
+          <string key="className">GradientBox</string>
+          <string key="superclassName">NSView</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBProjectSource</string>
+            <string key="minorKey">Classes/UtilityClasses/GradiantBox/GradientBox.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
           <string key="className">HelpButton</string>
           <string key="superclassName">NSButton</string>
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -2262,7 +2258,15 @@ ARcABAAAAAEAAAACARwAAwAAAAEAAQAAAVIAAwAAAAEAAQAAAVMAAwAAAAIAAQABAAAAAA</bytes>
           <reference key="sourceIdentifier" ref="1060448865"/>
         </object>
         <object class="IBPartialClassDescription">
+          <string key="className">NSResponder</string>
+          <reference key="sourceIdentifier" ref="1060448865"/>
+        </object>
+        <object class="IBPartialClassDescription">
           <string key="className">NSView</string>
+          <reference key="sourceIdentifier" ref="1060448865"/>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">NSWindow</string>
           <reference key="sourceIdentifier" ref="1060448865"/>
         </object>
         <object class="IBPartialClassDescription">
