--- a/English.lproj/LocalRepositoryRefSheet.xib
+++ b/English.lproj/LocalRepositoryRefSheet.xib
@@ -12,7 +12,7 @@
     </object>
     <object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
       <bool key="EncodedWithXMLCoder">YES</bool>
-      <integer value="419"/>
+      <integer value="301"/>
     </object>
     <object class="NSArray" key="IBDocument.PluginDependencies">
       <bool key="EncodedWithXMLCoder">YES</bool>
@@ -849,6 +849,7 @@
           <string>300.windowTemplate.minSize</string>
           <string>301.IBPluginDependency</string>
           <string>308.IBPluginDependency</string>
+          <string>311.CustomClassName</string>
           <string>311.IBAttributePlaceholdersKey</string>
           <string>311.IBPluginDependency</string>
           <string>312.IBPluginDependency</string>
@@ -896,6 +897,7 @@
           <string>{680, 241}</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+          <string>PathTextField</string>
           <object class="NSMutableDictionary">
             <string key="NS.key.0">ToolTip</string>
             <object class="IBToolTipAttribute" key="NS.object.0">
@@ -962,7 +964,7 @@
         </object>
       </object>
       <nil key="sourceID"/>
-      <int key="maxID">419</int>
+      <int key="maxID">421</int>
     </object>
     <object class="IBClassDescriber" key="IBDocument.Classes">
       <object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -981,6 +983,14 @@
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
             <string key="majorKey">IBProjectSource</string>
             <string key="minorKey">Classes/UtilityClasses/CommandKeyTextField/CommandKeyTextField.h</string>
+          </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">GradientBox</string>
+          <string key="superclassName">NSView</string>
+          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+            <string key="majorKey">IBProjectSource</string>
+            <string key="minorKey">Classes/UtilityClasses/GradiantBox/GradientBox.h</string>
           </object>
         </object>
         <object class="IBPartialClassDescription">
@@ -1046,7 +1056,7 @@
             <object class="NSMutableArray" key="dict.values">
               <bool key="EncodedWithXMLCoder">YES</bool>
               <string>NSButton</string>
-              <string>NSTextField</string>
+              <string>PathTextField</string>
               <string>NSBox</string>
               <string>NSTextField</string>
               <string>NSWindow</string>
@@ -1072,7 +1082,7 @@
               </object>
               <object class="IBToOneOutletInfo">
                 <string key="name">pathField</string>
-                <string key="candidateClassName">NSTextField</string>
+                <string key="candidateClassName">PathTextField</string>
               </object>
               <object class="IBToOneOutletInfo">
                 <string key="name">repositoryPathBox</string>
@@ -1092,7 +1102,7 @@
               </object>
             </object>
           </object>
-          <object class="IBClassDescriptionSource" key="sourceIdentifier">
+          <object class="IBClassDescriptionSource" key="sourceIdentifier" id="736352652">
             <string key="majorKey">IBProjectSource</string>
             <string key="minorKey">Classes/Sheets/RepositorySheets/LocalRepositoryRefSheetController.h</string>
           </object>
@@ -1121,12 +1131,21 @@
           <reference key="sourceIdentifier" ref="369712638"/>
         </object>
         <object class="IBPartialClassDescription">
+          <string key="className">NSResponder</string>
+          <reference key="sourceIdentifier" ref="369712638"/>
+        </object>
+        <object class="IBPartialClassDescription">
           <string key="className">NSView</string>
           <reference key="sourceIdentifier" ref="369712638"/>
         </object>
         <object class="IBPartialClassDescription">
           <string key="className">NSWindow</string>
           <reference key="sourceIdentifier" ref="369712638"/>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">PathTextField</string>
+          <string key="superclassName">NSTextField</string>
+          <reference key="sourceIdentifier" ref="736352652"/>
         </object>
       </object>
       <object class="NSMutableArray" key="referencedPartialClassDescriptionsV3.2+">
